Overhaul in preparation for fixing google drive
Update to latest version of many dependencies
Overhaul configuration system to be a lot simpler
Config and log file locations now follow convention better
Fix lots of new lints
Create a docker setup with server and multiple clients for testing (still need to fix clients 2,3)
Add ability to trigger actions from web interface

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /target
 /data/log/*.log
-/data/config/*.toml
-/data/config/*.yml
-/data/config/*.json
+/data/dockerVolumes/*
+/data/config.json
+/data/serverFiles/*
 
 ########## Platform/language/tool specific stuff that github recommends to ignore
 
@@ -12,7 +12,7 @@ target/
 **/*.rs.bk
 
 ########## VS Code
-.vscode/*
+.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
