--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,30 +2,32 @@
 name = "redundinator"
 version = "0.0.0"
 authors = ["Anthony Heathcoat <tony@aehdev.com>"]
-edition = "2018"
+edition = "2021"
+license = "GPL-3.0+"
+description = "Backup software"
 
 [dependencies]
-actix-web = "3.3.2"
-actix-rt = "1.1.1"
-actix-http = "2.2.0"
-actix-files = "0.4.1"
-async-trait = "0.1.42"
-chrono = "0.4.19"
-config = "0.10.1"
-clap = {version = "2.33.3", features = ["yaml"]}
-curl = "0.4.34"
-enquote = "1.0.3"
-futures = "0.3.8"
-glob = "0.3.0"
+actix-web = "4.3.0"
+actix-rt = "2.8.0"
+actix-http = "3.3.0"
+actix-files = "0.6.2"
+async-trait = "0.1.62"
+chrono = "0.4.23"
+config = { version = "0.13.3", features = ["json", "json5"] }
+google-drive = "0.6.0"
+clap = { version = "4.1.1", features = ["derive", "env", "unicode", "wrap_help"] }
+curl = "0.4.44"
+enquote = "1.1.0"
+futures = "0.3.25"
+glob = "0.3.1"
 lazy_static = "1.4.0"
-log = "0.4.11"
-log4rs = "0.13.0"
-nix = "0.19.1"
-num = "0.3.1"
-regex = "1.4.3"
-rsyn = "0.0.1"
-run_script = "0.6.3"
-serde = { version = "1.0.118", features = ["derive"] }
-serde_json = "1.0.60"
-uuid = { version = "0.8.1", features = ["serde", "v4"] }
-yaml-rust = "0.3.5"
+log = "0.4.17"
+log4rs = "1.2.0"
+nix = "0.26.2"
+num = "0.4.0"
+regex = "1.7.1"
+run_script = "0.10.1"
+serde = { version = "1.0.100", features = ["derive"] }
+serde_json = "1.0.91"
+uuid = { version = "1.2.2", features = ["v4"] }
+md-5 = "0.10.5"
