--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ serde = { version = "1.0.100", features = ["derive"] }
 serde_json = "1.0.91"
 uuid = { version = "1.2.2", features = ["v4"] }
 md-5 = "0.10.5"
+tokio = "1.28.0"
