Google drive upload works now
Fully transitioned google drive functionality to use a library
instead of scripting a command line tool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,18 @@ actix-files = "0.6.2"
 async-trait = "0.1.62"
 chrono = "0.4.23"
 config = { version = "0.13.3", features = ["json", "json5"] }
-google-drive = "0.6.0"
+google-drive3 = "5.0.2"
 clap = { version = "4.1.1", features = ["derive", "env", "unicode", "wrap_help"] }
 curl = "0.4.44"
 enquote = "1.1.0"
 futures = "0.3.25"
 glob = "0.3.1"
+hyper = "0.14.27"
+hyper-rustls = {version = "0.24.1", features=["http2"]}
 lazy_static = "1.4.0"
 log = "0.4.17"
 log4rs = "1.2.0"
+mime = "0.3.17"
 nix = "0.26.2"
 num = "0.4.0"
 regex = "1.7.1"
@@ -32,3 +35,4 @@ serde_json = "1.0.91"
 uuid = { version = "1.2.2", features = ["v4"] }
 md-5 = "0.10.5"
 tokio = "1.28.0"
+yup-oauth2 = "8.3.0"
