--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ actix-rt = "2.8.0"
 actix-http = "3.3.0"
 actix-files = "0.6.2"
 async-trait = "0.1.62"
-chrono = "0.4.23"
 config = { version = "0.13.3", features = ["json", "json5"] }
 google-apis-common = "5.0.2"
 google-drive3 = "5.0.2"
@@ -37,3 +36,9 @@ uuid = { version = "1.2.2", features = ["v4"] }
 md-5 = "0.10.5"
 tokio = "1.28.0"
 yup-oauth2 = "8.3.0"
+dropbox-sdk = { version = "0.18.1", features = ["default_client", "dbx_files"] }
+parallel_reader = "0.1.2"
+chrono = "0.4.38"
+sqlite = "0.36.0"
+rand = "0.8.5"
+tempfile = "3.10.1"
