--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /data/log/*.log
 /data/dockerVolumes/*
 /data/config.json
+/data/tokens.db
 /data/serverFiles/*
 
 ########## Platform/language/tool specific stuff that github recommends to ignore
